# dkts-frontend

./: .gitignore  .prettierignore  app.vue  nuxt.config.ts  package-lock.json  package.json  pyproject.toml
assets/: main.css  main.scss
components/: ActorCard.vue  AppFooter.vue  AppHeader.vue  PageTitle.vue  PlayCard.vue  StageCard.vue  StagePill.vue  StandardButton.vue  TicketButton.vue
components/actor/: BioRow.vue  DetailsRow.vue  ProfileRow.vue
components/actor/profile/: DesktopGallery.vue  DesktopTitle.vue  ImageGallery.vue  MobileGallery.vue  MobileTitle.vue  VideoGallery.vue
components/actors/: ActorCards.vue
components/footer/: ContactsCol.vue  SocialCol.vue  SponsorsRow.vue
components/header/: AboutDropdown.vue  FestivalsDropdown.vue  LangDropdown.vue  Toggler.vue
components/history/: Paragraph.vue
components/home/: Calendar.vue  MainAccent.vue  MainCarousel.vue
components/home/[TBD]main-carousel/: Desktop.vue  Mobile.vue
components/home/calendar/: DesktopEvent.vue  FilterRow.vue  (+1 more)
components/play/: DescriptionRow.vue  DetailsRow.vue  PosterRow.vue
components/plays/: Filters.vue  PlayCards.vue
composables/: useDynamicGallery.ts  useFilters.ts  useImageDimensions.ts
layouts/: default.vue
modules/: siteConfig.ts
pages/: about.vue  events.vue  index.vue
pages/about/: actors.vue  history.vue  index.vue  stages.vue
pages/events/: index.vue  plays.vue
pages/festivals/: ftk.vue  index.vue
plugins/: i18n.ts
public/: _robots.txt  ftk_bg.json  ftk_en.json
utils/: config.ts  display.ts  imageSizes.ts  ticket.ts  translation.ts
(+18 files in other folders)
