[tool.poetry]
name = "dkts frontend"
version = "0.1.0"
description = ""
authors = ["Peter Bozukov <bozukov.p@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
b2sdk = "^2.5.1"
upstash-redis = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
